cloud-infra-macros/tests/fails/timeout_too_low.rs
use cloud_infra_macros::timeout;

fn example() {
    let t = timeout!(0);
}

fn main() {}