cloud-infra-macros/tests/fails/timeout_too_low.stderr
error: proc macro panicked
 --> tests/fails/timeout_too_low.rs:4:13
  |
4 |     let t = timeout!(0);
  |             ^^^^^^^^^^^
  |
  = help: message: value should be at least 1
